--- a/index.html
+++ b/index.html
@@ -5,12 +5,22 @@
   <meta name="viewport" content="width=360, height=640, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>Memory Match Game</title>
   <link rel="stylesheet" href="style.css" />
-  <!-- Google AdMob SDK -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
+
+  <!-- Login/Signup Screen -->
+  <div id="auth-screen" class="center-screen">
+    <h1 class="small-title">Welcome to Memory Match</h1>
+    <input type="email" id="emailInput" placeholder="Enter your email" class="input-field" />
+    <div class="popup-buttons" style="flex-direction: column; gap: 10px; margin-top: 20px;">
+      <button id="loginBtn" class="btn-primary">Login</button>
+      <button id="signupBtn" class="btn-primary">Sign Up</button>
+    </div>
+  </div>
+
   <!-- Start Screen -->
-  <div id="start-screen" class="center-screen">
+  <div id="start-screen" class="center-screen hidden">
     <h1 class="small-title">MEMORY MATCH</h1>
     <button id="startBtn" class="btn-primary">Start</button>
   </div>
@@ -93,7 +103,6 @@
 
   <!-- Footer with Banner Ad -->
   <div id="bannerAdContainer" style="width: 360px; height: 50px; margin: 0 auto; position: fixed; bottom: 90px; left: 50%; transform: translateX(-50%); z-index: 1000;">
-    <!-- Google AdMob Banner Ad -->
     <ins class="adsbygoogle"
          style="display:inline-block;width:360px;height:50px"
          data-ad-client="ca-pub-6948714269796627"
