--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="popup-content">
       <h2>Time Out!</h2>
       <div class="popup-buttons" style="justify-content: center; gap: 15px;">
-        <button id="timeoutContinueBtn" class="btn-primary">Continue <br/><small>(Watch Ad)</small></button>
+        <button id="timeoutContinueBtn" class="btn-primary">Continue <br/><small>(Watch Ad 5 sec)</small></button>
         <button id="timeoutPlayAgainBtn" class="btn-primary">Play Again</button>
       </div>
     </div>
