--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
       </div>
       <p id="authMessage" class="auth-message"></p>
     </div>
-  </div>
-      
-  <!-- Start Screen -->
   <div id="start-screen" class="center-screen hidden">
     <h1 class="small-title">MEMORY MATCH</h1>
     <button id="startBtn" class="btn-primary">Start</button>
@@ -70,7 +67,7 @@
       <p>Do you want to continue from where you left off?</p>
       <div class="popup-buttons">
         <button id="newGameBtn" class="btn-primary">Restart from Level 1</button>
-        <button id="continueBtn" class="btn-primary">Continue from Last Level</button>
+        <button id="continueBtn" class="btn-primary">Continue watch ad 3 sec</button>
       </div>
     </div>
   </div>  <!-- Win/Lose Popup Modal -->  <div id="popup" class="popup hidden">
