--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       </div>
       <p id="authMessage" class="auth-message"></p>
     </div>
+  </div>
   <div id="start-screen" class="center-screen hidden">
     <h1 class="small-title">MEMORY MATCH</h1>
     <button id="startBtn" class="btn-primary">Start</button>
